--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ header {
     display: none;
 }
 
-section {
+section:not(.section2):not(#footer) {
     /* configuracao padrao para todas as sessoes */
     padding: 160px 15% 120px;
 }
@@ -113,7 +113,7 @@ section {
 }
 */
 
-.home img{
+.home img {
     position: absolute;
     left: 0;
     object-fit: cover;
@@ -371,7 +371,7 @@ section {
     cursor: pointer;
 }
 
-#row1{
+#row1 {
     height: 430px;
 }
 
@@ -484,30 +484,31 @@ section {
     margin-top: 5rem;
     color: var(--text-color);
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
+    padding: 5% 0 5% 0;
 }
 
-#footer h2{
+#footer h2 {
     font-size: 1.3rem;
     margin-bottom: 2.5rem;
 }
 
 .alinhar-container {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: flex-start;
+    flex-wrap: wrap;
 }
 
-.container1{
+.container1 {
     width: 30%;
     margin-right: 7%;
 }
 
-.container{
+.container {
     margin-right: 7%;
 }
-
 
 .container .texto {
     margin-top: 2rem;
@@ -519,26 +520,26 @@ section {
     color: #008EDE;
 }
 
-.texto-p{
+.texto-p {
     margin-bottom: 1.3rem;
     font-size: 1rem;
 }
 
 .container .texto a:hover {
-    color: var(--text-color);
+    color: var(--bg-color);
     transition: all .45s ease;
 }
 
 #icon-footer {
     font-size: 2.3rem;
-    color: var(--text-color);
+    color: var(--second-color);
     display: inline-flex;
     flex-wrap: wrap;
     padding-top: 0.5rem;
     margin-right: 10px;
 }
 
-#icon-footer p{
+#icon-footer p {
     font-size: 1rem;
     display: flex;
     align-items: center;
@@ -546,9 +547,62 @@ section {
 }
 
 #icon-footer:hover {
-    color: var(--main-color);
+    color: var(--bg-color);
     transform: translateY(5px);
     transition: all .45s ease;
+}
+
+#logo-footer {
+    width: 250px;
+    height: auto;
+    display: flex;
+    align-items: center;
+}
+
+#footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+#footer2 {
+    background-color: var(--main-color);
+    color: var(--text-color);
+    padding: 0 10% 0 10%;
+}
+
+#footer3 {
+    background-color: var(--bg-color);
+    color: var(--second-color);
+    padding: 0.6rem 10% 0.6rem 10%;
+}
+
+#div-footer3 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navlist-footer3 {
+    display: flex;
+}
+
+.navlist-footer3 a {
+    font-size: 0.9rem;
+    font-weight: 500;
+    color: var(--second-color);
+    margin: 0 25px;
+    transition: all .45s ease;
+    text-decoration: none;
+}
+
+.navlist-footer3 a:hover {
+    color: var(--main-color);
+}
+
+#h2-footer3 {
+    font-weight: 400;
 }
 
 /* SECTION FOOTER =====================================================  */
