Finalizando Pag. Produtos

--- a/css/produtos.css
+++ b/css/produtos.css
@@ -25,21 +25,19 @@
 .card {
     border-radius: 25px;
     background-color: var(--second-color);
-    
+
 }
 
 .slide-content {
-    margin: 0 40px; 
+    margin: 0 40px;
     overflow: hidden;
     border-radius: 25px;
-    background-color: var(--main-color);
 }
 
-.slide-container{
+.slide-container {
     max-width: 1120px;
     width: 100%;
-    background-color: var(--bg-color);
-    padding: 40px 0;
+    padding: 40px;
 }
 
 .image-content, .card-content {
@@ -83,7 +81,6 @@
 .button-produtos:hover {
     transition: all .45s ease;
     transform: scale(1.1);
-    background-color: var(--main-color);
     filter: brightness(105%);
 }
 
@@ -107,29 +104,40 @@
     bottom: -40px;
 }
 
-.overlay::after{
+.overlay::after {
     border-radius: 0 25px 0 0;
     background-color: var(--second-color);
 }
 
-.swiper-navBtn{
+#swiper-navBtn {
     color: var(--main-color);
 }
 
-.swiper-navBtn:hover{
+#swiper-navBtn:hover {
     transition: all .45s ease;
     filter: brightness(80%);
 }
 
-.swiper-navBtn::before, .swiper-navBtn::after{
-    font-size: 40px;   
+#swiper-navBtn::before, .swiper-navBtn::after {
+    font-size: 40px;
 }
 
-.swiper-button-next{
+.swiper-button-next {
     right: 0;
 }
 
-.swiper-button-prev{
+.swiper-button-prev {
     left: 0;
 }
+
+.swiper-pagination-bullet {
+    color: var(--bg-color);
+    opacity: 1;
+}
+
+.swiper-pagination-bullet-active {
+    color: var(--bg-color);
+    filter: brightness(105%);
+}
+
 /* SECTION PRODUTOS ===================================================  */
