--- a/css/tulipa.css
+++ b/css/tulipa.css
@@ -1,16 +1,19 @@
 /* SECTION PRODUTOS ===================================================  */
+#h2-tulipa{
+    text-align: center;
+    font-size: 2.5rem;
+    margin-top: 3rem;
+}
+
 .card-image {
     position: relative;
-    height: 150px;
-    width: 150px;
-    border-radius: 50%;
 }
 
 .card-image .card-img {
     height: 100%;
     width: 100%;
     object-fit: cover;
-    border-radius: 50%;
+    border-radius: 25px;
     border: 4px solid var(--main-color);
 }
 
@@ -50,40 +53,23 @@
     row-gap: 5px;
     position: relative;
     padding: 25px 0;
-
 }
 
 .name {
     font-size: 1.7rem;
     font-weight: 550;
     color: #333;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .description {
     font-size: 1.1rem;
     color: var(--text-color);
-    text-align: center;
+    text-align: left;
     margin-top: 1rem;
     font-family: "Muller";
     line-height: 1.5;
-}
-
-.button-produtos {
-    border: none;
-    font-size: 1rem;
-    color: var(--second-color);
-    padding: 0.5rem 1rem;
-    background-color: var(--main-color);
-    border-radius: 6px;
-    margin: 0.9rem;
-    cursor: pointer;
-    box-shadow: 0 3px 3px -1px #ccc;
-}
-
-.button-produtos:hover {
-    transition: all .45s ease;
-    transform: scale(1.1);
-    filter: brightness(105%);
 }
 
 .overlay {
@@ -94,57 +80,6 @@
     top: 0;
     background-color: var(--main-color);
     border-radius: 0px 25px 0px 25px;
-}
-
-#swiper-navBtn {
-    color: var(--main-color);
-}
-
-#swiper-navBtn:hover {
-    transition: all .45s ease;
-    filter: brightness(80%);
-}
-
-#swiper-navBtn::before, .swiper-navBtn::after {
-    font-size: 40px;
-}
-
-.swiper-button-next {
-    right: 0;
-}
-
-.swiper-button-prev {
-    left: 0;
-}
-
-.swiper-button-next:hover {
-    transition: all .45s ease;
-    transform: translateX(5px);
-}
-
-.swiper-button-prev:hover {
-    transition: all .45s ease;
-    transform: translateX(-5px);
-}
-
-.swiper-pagination-bullet {
-    color: var(--bg-color);
-    opacity: 1;
-}
-
-.swiper-pagination-bullet-active {
-    color: var(--bg-color);
-    filter: brightness(105%);
-}
-
-.div-h2-produtos {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-}
-
-#h2-produtos {
-    text-align: center;
-    font-size: 2.5rem;
 }
 
 .div-button-produtos {
