--- a/css/produtos.css
+++ b/css/produtos.css
@@ -1,19 +1,4 @@
 /* SECTION PRODUTOS ===================================================  */
-.card-image {
-    position: relative;
-    height: 150px;
-    width: 150px;
-    border-radius: 50%;
-}
-
-.card-image .card-img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 50%;
-    border: 4px solid var(--main-color);
-}
-
 #section-produtos {
     min-height: 100vh;
     align-items: center;
@@ -57,6 +42,7 @@
     font-size: 1.7rem;
     font-weight: 550;
     color: #333;
+    margin-top: 10rem;
 }
 
 .description {
@@ -88,12 +74,31 @@
 
 .overlay {
     position: absolute;
-    height: 100%;
+    height: 10rem;
     width: 100%;
     left: 0;
     top: 0;
     background-color: var(--main-color);
     border-radius: 0px 25px 0px 25px;
+    border: 3px solid var(--bg-color);
+}
+
+#overlay1{
+    background-image: url(../imgs/tulipa.png);
+    background-size: 110%;
+    background-repeat: no-repeat;
+}
+
+#overlay2{
+    background-image: url(../imgs/fingers.png);
+    background-size: 110%;
+    background-repeat: no-repeat;
+}
+
+#overlay3{
+    background-image: url(../imgs/flexgripper.png);
+    background-size: 110%;
+    background-repeat: no-repeat;
 }
 
 #swiper-navBtn {
@@ -125,16 +130,6 @@
 .swiper-button-prev:hover {
     transition: all .45s ease;
     transform: translateX(-5px);
-}
-
-.swiper-pagination-bullet {
-    color: var(--bg-color);
-    opacity: 1;
-}
-
-.swiper-pagination-bullet-active {
-    color: var(--bg-color);
-    filter: brightness(105%);
 }
 
 .div-h2-produtos {
