--- a/css/tulipa.css
+++ b/css/tulipa.css
@@ -77,4 +77,45 @@
     margin-top: 3rem;
 }
 
+#h2-documentacao{
+    text-align: center;
+    font-size: 2rem;
+    margin-top: 3rem;
+}
+
+.p-documentacao{
+    text-align: center;
+    margin-top: 2rem;
+    color: #595959;
+}
+
+.div-baixar{
+    background-color: #fff;
+    box-shadow: 0 7px 7px -1px #ccc;
+    padding: 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 1rem;
+    margin-top: 5rem;
+}
+
+#pdf-baixar{
+    font-size: 3rem;
+    color: #f40f02 ;
+}
+
+#icon-baixar{
+    font-size: 3rem;
+    color: var(--text-color);
+}
+
+#icon-baixar:hover{
+    transition: all .45s ease;
+    transform: scale(1.1);
+}
+
+#p-documentacao{
+    font-size: 1.6rem;
+}
 /* SECTION TULIPA ===================================================  */
