--- a/css/produtos.css
+++ b/css/produtos.css
@@ -42,7 +42,6 @@
     font-size: 1.7rem;
     font-weight: 550;
     color: #333;
-    margin-top: 10rem;
 }
 
 .description {
@@ -72,34 +71,19 @@
     filter: brightness(105%);
 }
 
-.overlay {
-    position: absolute;
-    height: 10rem;
+.card-image {
+    position: relative;
+}
+
+.card-image .card-img {
+    height: 100%;
     width: 100%;
-    left: 0;
-    top: 0;
-    background-color: var(--main-color);
-    border-radius: 0px 25px 0px 25px;
-    border: 3px solid var(--bg-color);
+    object-fit: cover;
+    border-radius: 25px;
+    border: 4px solid var(--main-color);
+    border-radius: 0 25px 0 25px;
 }
 
-#overlay1{
-    background-image: url(../imgs/tulipa.png);
-    background-size: 110%;
-    background-repeat: no-repeat;
-}
-
-#overlay2{
-    background-image: url(../imgs/fingers.png);
-    background-size: 110%;
-    background-repeat: no-repeat;
-}
-
-#overlay3{
-    background-image: url(../imgs/flexgripper.png);
-    background-size: 110%;
-    background-repeat: no-repeat;
-}
 
 #swiper-navBtn {
     color: var(--main-color);
