--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@
     box-sizing: border-box;
     list-style-type: none;
     scroll-behavior: smooth;
+    scroll-padding-top: 2rem;
     text-decoration: none;
     font-family: "Grover Caps";
 }
@@ -46,4 +47,8 @@ body {
     background: var(--second-color);
     color: var(--text-color);
     font-family: Arial, Helvetica, sans-serif;
+}
+
+img{
+    width: 100%;
 }
