--- a/css/noticias.css
+++ b/css/noticias.css
@@ -110,4 +110,9 @@
     border: 2px solid var(--bg-color);
 }
 
+.profile-name{
+    font-size: 0.82rem;
+    font-weight: 500;
+}
+
 /* SECTION TULIPA ===================================================  */
