--- a/css/noticias.css
+++ b/css/noticias.css
@@ -9,8 +9,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    column-gap: 1.5rem;
+    column-gap: 2.5rem;
+    row-gap: 2rem;
     margin-top: 2rem !important;
+    flex-wrap: wrap;
 }
 
 .filter-item {
@@ -36,7 +38,7 @@
 
 .post-box {
     background: var(--second-color);
-    box-shadow: 0 4px 14px hsl(355deg 25% 15% / 10%);
+    box-shadow: 6px 6px 2px hsl(355deg 25% 15% / 10%);
     padding: 15px;
     border-radius: 0.5rem;
 }
