--- a/css/pos-noticias.css
+++ b/css/pos-noticias.css
@@ -1,43 +1,41 @@
 /* SECTION TULIPA ===================================================  */
-section{
-    /*padding: 160px 15% 120px;*/
+#post-header {
+    padding: 120px 15%;
 }
 
-#h2-pos-noticia{
+#h2-pos-noticia {
     text-align: center;
     font-size: 2.5rem;
     margin-top: 3rem;
 }
 
-#post-header{
-    width: 100%;
-    height: 500px;
-    background-color: var(--bg-color);
-}
-
-.header-content{
+.header-content {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 4rem !important;
 }
 
-#h2-pos-noticia{
-    color: var(--second-color);
+#h2-pos-noticia {
+    color: var(--text-color);
 }
 
-.back-home{
+#texto-pos{
+    padding: 0 15% 0 15%;
+}
+
+.back-home {
     font-size: 0.9rem;
     color: var(--text-color);
 }
 
-.back-home:hover{
+.back-home:hover {
     transition: all .45s ease;
     transform: scale(1.1);
     color: var(--main-color);
 }
 
-.header-title{
+.header-title {
     width: 90%;
     font-size: 2.6rem;
     color: var(--text-color);
@@ -45,26 +43,28 @@ section{
     margin-bottom: 3rem;
 }
 
-.header-img{
+.header-img {
     width: 100%;
-    height: 420px;
+    height: 100%;
     object-fit: cover;
     object-position: center;
+    border-radius: 1rem;
 }
 
-.post-content{
-    margin-top: 10rem !important;
-}
-
-.sub-heading{
+.sub-heading {
     font-size: 1.2rem;
 }
 
-.post-text{
+.post-text {
     font-size: 1rem;
     line-height: 1.7rem;
     margin: 1rem 0;
     text-align: left;
+    font-family: "Muller";
+}
+
+.texto-post2{
+    margin-top: 4rem;
 }
 
 #icon-post {
@@ -82,15 +82,18 @@ section{
     transition: all .45s ease;
 }
 
-.share{
+.share {
     display: flex;
     flex-direction: column;
     align-items: center;
     row-gap: 1rem;
+    margin-top: 10%;
 }
 
-.share-title{
+.share-title {
     font-size: 1.1rem;
     margin-top: 2rem;
+    text-align: center;
 }
+
 /* SECTION TULIPA ===================================================  */
