--- a/css/noticias.css
+++ b/css/noticias.css
@@ -60,6 +60,13 @@
     margin-top: 1rem;
 }
 
+.footer-title{
+    font-size: 1.3rem;
+    font-weight: 600;
+    color: var(--text-color);
+    margin-top: 1rem;
+}
+
 .post-title {
     font-size: 1.3rem;
     font-weight: 600;
