--- a/css/contato.css
+++ b/css/contato.css
@@ -1,9 +1,14 @@
 /* SECTION CONTATO ====================================================  */
+section{
+    padding: 160px 5% 0;
+}
+
 .contact {
     /* estilo da section contato */
-    background: var(--second-bg-color);
+    background: var(--second-color);
     align-items: center;
     margin-top: 5rem;
+    margin-bottom: 8rem;
 }
 
 .contact-text {
@@ -51,7 +56,7 @@ form textarea {
     outline: none;
     font-size: 1.2rem;
     border-radius: 8px;
-    margin-bottom: 10px;
+    margin-bottom: 1.2rem;
     font-family: var(--muller-font);
     line-height: 1.2;
 }
@@ -68,7 +73,7 @@ form textarea {
     display: inline-block;
     font-size: 1.2rem;
     background: var(--main-color);
-    color: var(--text-color);
+    color: var(--second-color);
     transition: all .45s ease;
     font-weight: bold;
 }
