--- a/css/fingers.css
+++ b/css/fingers.css
@@ -3,6 +3,7 @@
     text-align: center;
     font-size: 2.5rem;
     margin-top: 3rem;
+    margin-bottom: 3rem;
 }
 
 .card-image {
@@ -40,7 +41,6 @@
 .slide-container {
     max-width: 1120px;
     width: 100%;
-    padding: 40px;
 }
 
 .image-content, .card-content {
