--- a/css/produtos.css
+++ b/css/produtos.css
@@ -21,7 +21,7 @@
 .slide-container {
     max-width: 1120px;
     width: 100%;
-    padding: 40px;
+    padding-bottom: 4rem;
 }
 
 .image-content, .card-content {
@@ -76,7 +76,7 @@
 }
 
 .card-image .card-img {
-    height: 100%;
+    height: 200px;
     width: 100%;
     object-fit: cover;
     border-radius: 25px;
@@ -86,6 +86,7 @@
 
 
 #swiper-navBtn {
+    display: none;
     color: var(--main-color);
 }
 
@@ -128,6 +129,10 @@
 
 .div-button-produtos {
     margin-top: 3rem;
+}
+
+.footer-produtos{
+    margin-top: 0 !important;
 }
 
 /* SECTION PRODUTOS ===================================================  */
