Responsivo da Pág. de cada Produto Finalizo

--- a/css/fingers.css
+++ b/css/fingers.css
@@ -127,4 +127,8 @@
     align-items: center;
     flex-wrap: wrap;
 }
+
+.section-fingers-documentacao{
+    margin-top: 15% !important;
+}
 /* SECTION TULIPA ===================================================  */
