--- a/css/flexgrippers.css
+++ b/css/flexgrippers.css
@@ -14,8 +14,9 @@
     width: 100%;
     object-fit: cover;
     border-radius: 25px;
-    border: 4px solid var(--bg-color);
+    border: 4px solid var(--main-color);
     border-radius: 25px 0 25px 0;
+    box-shadow: 6px 6px 2px hsl(355deg 25% 15% / 10%);
 }
 
 #section-produtos {
