--- a/css/pos-noticias.css
+++ b/css/pos-noticias.css
@@ -53,6 +53,7 @@ section{
     object-fit: cover;
     object-position: center;
     border-radius: 0.5rem;
+    box-shadow: 7px 7px 2px hsl(355deg 25% 15% / 10%);
 }
 
 .sub-heading {
