--- a/css/produtos.css
+++ b/css/produtos.css
@@ -82,6 +82,7 @@
     border-radius: 25px;
     border: 4px solid var(--main-color);
     border-radius: 0 25px 0 25px;
+    box-shadow: 6px 6px 2px hsl(355deg 25% 15% / 10%);
 }
 
 
