--- a/css/pos-noticias.css
+++ b/css/pos-noticias.css
@@ -1,8 +1,4 @@
 /* SECTION TULIPA ===================================================  */
-section{
-    padding: 3% 10% !important;
-}
-
 #post-header {
     padding: 120px 15%;
 }
@@ -17,7 +13,7 @@ section{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 12rem !important;
+    margin-top: 4rem !important;
 }
 
 #h2-pos-noticia {
@@ -31,6 +27,8 @@ section{
 .back-home {
     font-size: 1.1rem;
     color: var(--text-color);
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
 .back-home:hover {
@@ -101,4 +99,16 @@ section{
     text-align: center;
 }
 
+.veja-tambem{
+    text-align: center;
+    margin-top: 8rem;
+}
+
+.post {
+    display: grid;
+    grid-template-columns: repeat(autofit, minmax(500px, auto)) !important;
+    justify-content: center;
+    gap: 2rem;
+    margin-top: 4rem;
+}
 /* SECTION TULIPA ===================================================  */
