--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -98,16 +98,16 @@
 /* SECTION FOOTER ===================== */
 
 /* SECTION PRODUTOS =================== */
-@media (max-width: 600px){
-    .section-tulipa{
+@media (max-width: 600px) {
+    .section-tulipa {
         padding: 160px 0 !important;
     }
 
-    .section-fingers{
+    .section-fingers {
         padding: 160px 0 !important;
     }
 
-    .section-flexgripper{
+    .section-flexgripper {
         padding: 160px 0 !important;
     }
 
@@ -170,7 +170,7 @@
         height: 200px !important;
     }
 
-    .section-main-pos-noticias{
+    .section-main-pos-noticias {
         padding: 3% 10% !important;
     }
 
@@ -180,5 +180,24 @@
 }
 
 /* SECTION PÓS-NOTÍCIAS =============== */
+
+@media all and (max-width: 820px) {
+    section.module h2 {
+        font-size: 32px;
+    }
+
+    .module h2, p {
+        padding: 0 8px;
+    }
+
+    .container {
+        margin: 0;
+        padding: 0;
+    }
+
+    section.module.parallax h1 {
+        font-size: 36px;
+    }
+}
 
 /* CSS RESPONSIVO =========================================== */
