--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,6 @@ header {
     padding: 22px 15%;
     box-shadow: 3px 1.4px 5px 4px #ccc;
     transition: all .45s ease;
-    overflow: hidden;
 }
 
 section:not(.section-fingers-documentacao) {
@@ -59,7 +58,7 @@ section:not(.section-fingers-documentacao) {
 
 #menu-icon {
     /* estilo do menu hamburguer (icone) */
-    font-size: 35px;
+    font-size: 3rem;
     color: var(--text-color);
     z-index: 10001;
     cursor: pointer;
@@ -67,7 +66,7 @@ section:not(.section-fingers-documentacao) {
     display: none;
 }
 
-.home {
+#home {
     /* estilo da section home */
     display: flex;
     flex-direction: column;
@@ -85,7 +84,7 @@ section:not(.section-fingers-documentacao) {
     -o-background-size: cover;
 }
 
-.home {
+#home {
     background-image: url(../imgs/fundo.png);
 }
 
@@ -122,7 +121,7 @@ video {
 }
 */
 
-.home img {
+#home img {
     position: absolute;
     left: 0;
     object-fit: cover;
@@ -133,7 +132,7 @@ video {
     background-size: cover;
 }
 
-.home .home-text {
+#home .home-text {
     position: relative;
     z-index: 1;
     max-width: 1000px;
@@ -366,7 +365,7 @@ video {
     display: block;
     transition: transform 0.5s;
     border: 4px solid var(--main-color);
-    border-radius: 25px 25px 25px 25px;
+    border-radius: 0 25px 0 25px;
 }
 
 .layer {
@@ -419,7 +418,6 @@ video {
 }
 
 #link-icon:hover {
-    /* hover icone da section portfolio */
     color: var(--main-color);
     background-color: transparent;
     transition: all .90s ease;
@@ -462,4 +460,3 @@ video {
 }
 
 /* SECTION PRINCIPAL =================================================== */
-
