--- a/css/produtos.css
+++ b/css/produtos.css
@@ -118,7 +118,7 @@
     }
 
     100% {
-        -webkit-transform: translateX(0.5rem);
+        -webkit-transform: translateX(0.5em);
     }
 }
 
@@ -128,7 +128,7 @@
     }
 
     100% {
-        -webkit-transform: translateX(-0.5rem);
+        -webkit-transform: translateX(-0.5em);
     }
 }
 
